ADD : seulgi_baekjoon_1001

--- a/beakjoon/1000/슬기.md
+++ b/beakjoon/1000/슬기.md
@@ -7,3 +7,22 @@ const sum = (A, B) => {
   return (0 < A && B < 10) ? A+B : 'error';
 }
 ```
+
+<!-- node.js  -->
+```javascript
+
+// 파일을 읽어오기 위해 node.js의 built-in file system인 fs module 사용
+let fs = require('fs');
+
+// input을 읽어와 변수로 선언 및 할당. toString()과 split()을 사용하여 array로 저장 됨
+// ** 백준 경로는 /dev/stdin. vscode에서 테스트를 할 때는 input값이 들어있는 txt파일을 경로로 지정.
+let input = fs.readFileSync('/dev/stdin').toString().split(' ');
+
+// input에서 지정한 value를 읽어와 다른 변수로 선언하고 활용
+// toString메소드로 문자로 지정되어 있는 것을 parseInt로 숫자 변환
+let a = parseInt(input[0]);
+let b = parseInt(input[1]);
+
+// 출력
+console.log(a + b);
+```
