[220728] 윤섭 풀이 추가(md 코드블럭으로 수정)

--- a/beakjoon/1152/윤섭.md
+++ b/beakjoon/1152/윤섭.md
@@ -1,4 +1,6 @@
+```javascript
 let str = 'The Curious Case of Benjamin Button'; // 예제 문자열
 let count = str.split(' ').length;
 
 console.log(count); // 6
+```
