--- a/beakjoon/1001/윤섭.md
+++ b/beakjoon/1001/윤섭.md
@@ -1,3 +1,4 @@
+```javascript
 function foo(a,b) {
   if(a > 0 && b < 10) {
     return a + b;
@@ -7,3 +8,4 @@ function foo(a,b) {
     return 'b is bigger than 10';
   }
 }
+```
